src/retrieve_09S2p000001tD76EAE/objects/Currency_Format__mdt.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PLN</fullName>
                    <default>true</default>
                    <label>PLN</label>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_at_the_end__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency at the end?</label>
        <type>Checkbox</type>
    </fields>
    <label>Currency Format</label>
    <pluralLabel>Currency Formats</pluralLabel>
</CustomObject>